hard-gists/835cda68ddd9c5416defce876a4d7dd9/run.log
=== Docker Run Log for 835cda68ddd9c5416defce876a4d7dd9 ===
Started at: Mi 29. Okt 17:44:10 CET 2025

[2025-10-29 17:44:11] START: Running container for 835cda68ddd9c5416defce876a4d7dd9
[2025-10-29 17:44:11] SUCCESS: Container 5e271fc624dfcbbe21c4d7d8f9ab6ea80ce83242b7be65486c1aebcda9d8900d started for 835cda68ddd9c5416defce876a4d7dd9
=== Container logs for 835cda68ddd9c5416defce876a4d7dd9 ===
  File "/snippet.py", line 28
    print "Extract images from %s on topic %s into %s" % (args.bag_file,
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 835cda68ddd9c5416defce876a4d7dd9 ===
[2025-10-29 17:44:13] INFO: Container 5e271fc624dfcbbe21c4d7d8f9ab6ea80ce83242b7be65486c1aebcda9d8900d has stopped
